# blue-taurus

./: .agent_id  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Fase1-SharedLib.ps1  admin_private.key  agent_public.key  fix_agent.ps1  fix_bom.ps1  gestao-ux.ps1  gestao-ux_dash_ana.ps1  keys.txt  migrar.ps1  setup_docker_deployment.ps1  setup_fase10.ps1  setup_fase11.ps1  setup_fase12.ps1  setup_fase13.ps1  setup_fase13_Novoserver.ps1  setup_phase_13_sca_integration.ps1  setup_phase_2.ps1  setup_phase_3.ps1  setup_phase_4.ps1  setup_phase_5.ps1  setup_phase_5_trigger.ps1  setup_phase_6_enrichment.ps1  setup_phase_7_Interface.ps1  setup_phase_7_fix.ps1  ui_brand.ps1
assets/: cis_windows_basic.yaml  index.html
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/agent/src/collector/: mod.rs
crates/agent/src/net/: mod.rs
crates/agent/src/sca/: mod.rs
crates/server/: Cargo.toml
crates/server/migrations/: 20251210192549_init_schema.sql  20251211205323_compliance.sql  20251211211214_compliance_json.sql  20251211211547_compliance_json.sql  20251211214516_compliance_json.sql  20251212184833_compliance_json.sql
crates/server/src/: main.rs
crates/server/src/socket/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/crypto/: mod.rs
crates/shared/src/models/: mod.rs  sca.rs
crates/shared/src/protocol/: mod.rs
docker/: docker-compose.yml
migrations/: 20251210191939_init_schema.sql
