[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"  # NOVO: Para ler as politicas
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
base64 = "0.21"
